fix(site): remove iframe padding on iOS #85

--- a/site/src/components/AspectRatio.module.css
+++ b/site/src/components/AspectRatio.module.css
@@ -1,6 +1,7 @@
 .ratio {
   display: grid;
   padding: 0;
+  position: relative;
 }
 
 .ratio > * {
@@ -9,4 +10,14 @@
 
 .innerSvg {
   visibility: hidden;
+}
+
+.content {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   overflow: hidden;
+   left: 0;
+   padding: 0;
+   right: 0;
 }
