--- a/site/src/css/custom.css
+++ b/site/src/css/custom.css
@@ -81,4 +81,5 @@ html[data-theme='dark'] .header-github-link:before {
 .game-embed {
   width: 100%;
   height: 100%;
+  padding: 0;
 }
